# campanha_completa_2026

./: .dockerignore  .env.example  .gitignore  Dockerfile.web  docker-compose.yml  nginx.conf  package-lock.json  package.json  vite.config.ts
.lovable/: plan.md
apps/api/: Dockerfile  full_schema.sql  import-master.js  import-tse-csv.js  package-lock.json  package.json  start.sh  tsconfig.build.json
docs/: 00-README-IA.md  01-PRD.md  02-ESCOPO-E-REGRAS-DE-NEGOCIO.md  03-FLUXOS-DO-SISTEMA.md  04-ARQUITETURA-DO-SISTEMA.md  05-BANCO-DE-DADOS-E-MODELAGEM.md  06-PERMISSOES-SEGURANCA-E-AUDITORIA.md  07-API-REFERENCE.md  08-PADROES-DE-CODIGO-E-NOMENCLATURA.md  09-FRONTEND-UI-UX-E-COMPONENTES.md  10-INTEGRACOES-EXTERNAS.md  11-IA-RAG-PROMPTS-E-AUTOMACOES.md  12-LOGS-ERROS-E-OBSERVABILIDADE.md  13-TESTES-QA-E-CRITERIOS-DE-ACEITE.md  14-DEPLOY-AMBIENTES-E-VARIAVEIS.md  15-BACKLOG-ROADMAP-E-FASES.md  16-ADR-DECISOES-TECNICAS.md  17-CHANGELOG.md  1_PRD_Visao_Produto.md  2_Arquitetura_Sistema.md  3_Nomenclatura_Padroes.md  4_API_Reference.md  5_Deploy_Coolify.md  tse-github-action.md
docs/arquitetura/: plano_parte2_schema_etl.md  plano_parte3_deploy_cronograma.md
infra/coolify/: docker-compose.app.yml  docker-compose.data.yml
scratch/: find_missing.cjs
scripts/: tse-import.mjs
src/: App.tsx  index.css
src/components/: ProtectedRoute.tsx
src/hooks/: useAgenda.ts  useCampanhaParametros.ts  useCampanhas.ts  useComando.ts  (+23 more)
workers/tse-etl/: Dockerfile  pyproject.toml
workers/tse-etl/src/: __init__.py  config.py  db.py  downloader.py  main.py  processor.py
(+145 files in other folders)
