[project]
name = "tse-etl"
version = "0.1.0"
description = "Worker ETL para dados do TSE — download, parse, transform, load"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "clickhouse-connect>=0.8",
    "minio>=7.2",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
